changed branch in code back to main, expect action to fail this time

--- a/.github/workflows/schemaspy.yml
+++ b/.github/workflows/schemaspy.yml
@@ -2,8 +2,7 @@ name: Generate Schemaspy Docs
 on:
   push:
     branches:
-      - bugfix/ALCS-775
-      # temp changing from main to bugfix/ALCS-775
+      - main
 env:
   NODE_ENV: test
 
