change to run prod on main

--- a/.github/workflows/schemaspy.yml
+++ b/.github/workflows/schemaspy.yml
@@ -2,9 +2,9 @@ name: Generate Schemaspy Docs
 on:
   push:
     branches:
-      - feature/ALCS-910
+      - main
 env:
-  NODE_ENV: test
+  NODE_ENV: prod
 
 jobs:
   generate_schemaspy:
