--- a/services/package.json
+++ b/services/package.json
@@ -48,6 +48,8 @@
     "@nestjs/platform-fastify": "^9.3.1",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/clamscan": "^2.0.5",
+    "clamscan": "^2.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "config": "^3.3.9",
