--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,4 +4,6 @@ tmp
 *.pickle
 *etl_log.txt
 __pycache__
-last_imported_application_file.txt
+*last_imported_application_file.txt
+last_imported_planning_file.txt
+last_imported_issue_file.txt
