--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,3 +3,7 @@ out
 tmp
 *.pickle
 *etl_log.txt
+__pycache__
+*last_imported_application_file.txt
+last_imported_planning_file.txt
+last_imported_issue_file.txt
