--- a/services/package.json
+++ b/services/package.json
@@ -40,7 +40,7 @@
     "@grpc/grpc-js": "^1.8.7",
     "@grpc/proto-loader": "^0.7.4",
     "@nestjs/axios": "^0.1.1",
-    "@nestjs/bull": "^0.6.2",
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^9.3.1",
     "@nestjs/config": "^2.3.0",
     "@nestjs/core": "^9.3.1",
@@ -48,7 +48,6 @@
     "@nestjs/platform-fastify": "^9.3.1",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
-    "bull": "^4.10.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "config": "^3.3.9",
@@ -80,7 +79,6 @@
     "@nestjs/cli": "^9.1.9",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.3.1",
-    "@types/bull": "^3.15.9",
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.16",
     "@types/jest": "28.1.4",
