--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -15,47 +15,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.3",
-    "@angular/cdk": "^15.1.3",
-    "@angular/common": "^15.1.3",
-    "@angular/compiler": "^15.1.3",
-    "@angular/core": "^15.1.3",
-    "@angular/forms": "^15.1.3",
-    "@angular/material": "^15.1.3",
-    "@angular/material-moment-adapter": "^15.1.3",
-    "@angular/platform-browser": "^15.1.3",
-    "@angular/platform-browser-dynamic": "^15.1.3",
-    "@angular/router": "^15.1.3",
-    "@bcgov/bc-sans": "^1.0.1",
-    "@ng-matero/extensions": "^15.0.1",
-    "@ng-select/ng-option-highlight": "^0.0.7",
+    "@angular/animations": "^16.2.11",
+    "@angular/cdk": "^16.2.11",
+    "@angular/common": "^16.2.11",
+    "@angular/compiler": "^16.2.11",
+    "@angular/core": "^16.2.11",
+    "@angular/forms": "^16.2.11",
+    "@angular/material": "^16.2.11",
+    "@angular/material-moment-adapter": "^16.2.11",
+    "@angular/platform-browser": "^16.2.11",
+    "@angular/platform-browser-dynamic": "^16.2.11",
+    "@angular/router": "^16.2.11",
+    "@bcgov/bc-sans": "^2.1.0",
+    "@ng-matero/extensions": "^16.1.2",
+    "@ng-select/ng-option-highlight": "^11.2.0",
     "angular-mentions": "^1.5.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.37",
-    "ngx-mask": "^15.0.3",
-    "rxjs": "~7.5.0",
+    "moment-timezone": "^0.5.43",
+    "ngx-mask": "^16.3.9",
+    "rxjs": "~7.8.1",
     "source-map-support": "^0.5.21",
-    "tslib": "^2.4.1",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.6.2",
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^15.0.0",
-    "@angular-devkit/build-angular": "^15.1.4",
-    "@angular-eslint/builder": "14.1.2",
-    "@angular-eslint/eslint-plugin": "14.1.2",
-    "@angular-eslint/eslint-plugin-template": "14.1.2",
-    "@angular-eslint/schematics": "^15.2.0",
-    "@angular-eslint/template-parser": "14.1.2",
-    "@angular/cli": "~15.1.2",
-    "@angular/compiler-cli": "^15.1.3",
-    "@golevelup/ts-jest": "^0.3.4",
-    "@types/jest": "^28.1.1",
-    "@typescript-eslint/eslint-plugin": "5.37.0",
-    "@typescript-eslint/parser": "5.37.0",
-    "eslint": "^8.23.1",
-    "jest": "^28.1.3",
-    "prettier": "^2.8.3",
-    "typescript": "4.9.4"
+    "@angular-builders/jest": "^16.0.1",
+    "@angular-devkit/build-angular": "^16.2.9",
+    "@angular-eslint/builder": "^16.2.0",
+    "@angular-eslint/eslint-plugin": "^16.2.0",
+    "@angular-eslint/eslint-plugin-template": "^16.2.0",
+    "@angular-eslint/schematics": "^16.2.0",
+    "@angular-eslint/template-parser": "^16.2.0",
+    "@angular/cli": "~16.2.9",
+    "@angular/compiler-cli": "^16.2.11",
+    "@golevelup/ts-jest": "^0.4.0",
+    "@types/jest": "^29.5.7",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
+    "eslint": "^8.52.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
+    "typescript": "4.9.5"
   }
 }
